--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -46,7 +46,7 @@
          margin: 0;
          ul a {
               padding-left: 60px;
-         }//?为什么不用li
+         }
             
      }
      li {
